--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,35 @@
+<style>
+  #home {
+    color: #da2d25;
+  }
+</style>
 <div class="author">
   <h1>Hi, I'm Rajat</h1>
   <p>And this is my Blog Website</p>
 </div>
-<img src="/images/blog_img.jpg" alt="Blog Image" height="200px" width="400px" />
+<div class="mainImg">
+  <img
+    src="/images/blog_img.jpg"
+    alt="Blog Image"
+    height="200px"
+    width="400px"
+  />
+</div>
 <section class="articles">
   <h2>Latest Posts</h2>
   <ul class="article-ul">
+    <a href="#">
+      <li>
+        <span class="title">Title</span>
+        <span class="date">Date</span>
+      </li>
+    </a>
+    <a href="#">
+      <li>
+        <span class="title">Title</span>
+        <span class="date">Date</span>
+      </li>
+    </a>
     <a href="#">
       <li>
         <span class="title">Title</span>
