--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,7 @@
       </li>
     </ul>
   </nav>
-  <button class="searchBtn" aria-expanded="false">
+  <button class="searchBtn" id="searchBtn" aria-expanded="false">
     Search
     <svg
       xmlns="http://www.w3.org/2000/svg"
