--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div class="container">
-      <%- include("../partials/header.ejs") %>
+      <%- include("../partials/search.ejs") %> <%-
+      include("../partials/header.ejs") %>
       <main class="main"><%- body %></main>
       <%- include("../partials/footer.ejs") %>
     </div>
