--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -254,9 +254,10 @@ footer {
   height: 3rem;
   padding: 2rem 0;
   position: absolute;
-  transform: scale(0.1);
+  transform: scale(0.1) translateY(-500px);
   transition: all 0.5s;
   visibility: hidden;
+  z-index: 3;
 }
 
 .searchBar.active {
