Article route formed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
 <section class="articles">
   <h2>Latest Posts</h2>
   <ul class="article-ul">
-    <a href="#">
+    <a href="/article">
       <li>
         <span class="title">Title</span>
         <span class="date">Date</span>
