--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,3 +1,8 @@
+<style>
+  #contact {
+    color: #da2d25;
+  }
+</style>
 <section class="articles" id="contact_links">
   <h2>Contact Links</h2>
   <ul class="article-ul">
