--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -365,3 +365,57 @@ form {
 .post > article {
   text-align: justify;
 }
+
+/* Admin Header */
+
+#admin-logo {
+  font-size: 1.3rem;
+  font-weight: 700;
+}
+
+/* Admin */
+
+.main_admin {
+  width: 80%;
+  margin: 20px auto;
+  padding: 10px;
+}
+
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 20px 0;
+}
+
+label {
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+input[type="text"],
+input[type="password"] {
+  width: 100%;
+  margin: 5px 0;
+  font-size: 1.2rem;
+  padding: 5px;
+  color: var(--primary-text-color);
+  outline: none;
+  border-radius: 7px;
+  border: none;
+}
+
+.btn {
+  font-size: 20px;
+  padding: 5px 10px;
+  cursor: pointer;
+  background-color: var(--primary-text-color);
+  color: var(--background-color);
+  margin: 10px 0;
+  border-radius: 7px;
+}
+
+.btn:active {
+  transform: scale(0.98);
+}
