--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -18,7 +18,7 @@
   <input type="submit" value="Login" class="btn" />
 </form>
 
-<h2>Register</h2>
+<!-- <h2>Register</h2>
 
 <form action="/register" method="post">
   <label for="username">Username</label>
@@ -36,4 +36,4 @@
     name="password"
   />
   <input type="submit" value="Register" class="btn" />
-</form>
+</form> -->
