--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,7 +4,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* border: 1px solid black; */
 }
 
 :root {
@@ -262,6 +261,7 @@ footer {
   transition: all 0.5s;
   visibility: hidden;
   z-index: 3;
+  border-radius: 7px;
 }
 
 .searchBar.active {
@@ -283,6 +283,7 @@ form {
   padding: 13px;
   width: 70%;
   outline: none;
+  border-radius: 7px;
 }
 
 #closeBtn {
@@ -381,7 +382,7 @@ form {
   padding: 10px;
 }
 
-form {
+.login-form {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -394,8 +395,7 @@ label {
   font-weight: 600;
 }
 
-input[type="text"],
-input[type="password"] {
+.login-input {
   width: 100%;
   margin: 5px 0;
   font-size: 1.2rem;
