--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -1,12 +1,13 @@
 <h2>Sign In</h2>
 
-<form action="/admin" method="post">
+<form action="/admin" method="post" class="login-form">
   <label for="username">Username</label>
   <input
     type="text"
     placeholder="Enter Username"
     id="username"
     name="username"
+    class="login-input"
   />
   <label for="password">Password</label>
   <input
@@ -14,6 +15,7 @@
     placeholder="Enter Password"
     id="password"
     name="password"
+    class="login-input"
   />
   <input type="submit" value="Login" class="btn" />
 </form>
