--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* border: 1px solid #10275e; */
 }
 
 :root {
@@ -269,7 +270,7 @@ footer {
   visibility: visible;
 }
 
-form {
+.searchForm {
   width: 100%;
   display: flex;
   align-items: center;
@@ -414,8 +415,69 @@ label {
   color: var(--background-color);
   margin: 10px 0;
   border-radius: 7px;
+  border: none;
 }
 
 .btn:active {
   transform: scale(0.98);
+}
+
+/* Dashboard */
+
+.admin-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 20px 0;
+}
+
+.admin-title > a {
+  text-decoration: underline;
+}
+
+.admin-title > a:hover {
+  color: var(--secondary-text-color);
+}
+
+.admin-posts {
+  margin: 30px 0;
+  list-style: none;
+}
+
+.admin-posts > li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.admin-posts > li > a {
+  text-decoration: underline;
+  font-size: 1.2rem;
+}
+
+.admin-post-controls {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.admin-post-controls > a {
+  margin-right: 5px;
+}
+
+.admin-post-controls > form > input {
+  height: fit-content;
+  width: 100%;
+  margin: 0;
+  padding: 8px 5px;
+}
+
+/* Add Article */
+
+label.mar {
+  font-size: 1.2rem;
+}
+
+.mar {
+  margin: 15px 0;
 }
