--- a/views/partials/header_admin.ejs
+++ b/views/partials/header_admin.ejs
@@ -16,6 +16,6 @@
     </ul>
   </nav>
   <a href="/logout">
-    <button id="logout" class="searchBtn">Logout</button>
+    <a href="/logout" id="logout">Logout</a>
   </a>
 </header>
