--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,13 +5,25 @@
   <nav class="navbar">
     <ul>
       <li>
-        <a href="/" id="home">Home</a>
+        <a href="/" id="home" class="<%= isActiveRoute('/',currentRoute)%>"
+          >Home</a
+        >
       </li>
       <li>
-        <a href="/about" id="about">About</a>
+        <a
+          href="/about"
+          id="about"
+          class="<%= isActiveRoute('/about',currentRoute)%>"
+          >About</a
+        >
       </li>
       <li>
-        <a href="/contact" id="contact">Contact</a>
+        <a
+          href="/contact"
+          id="contact"
+          class="<%= isActiveRoute('/contact',currentRoute)%>"
+          >Contact</a
+        >
       </li>
     </ul>
   </nav>
