Character Counter Added

--- a/views/admin/add-article.ejs
+++ b/views/admin/add-article.ejs
@@ -12,7 +12,7 @@
     name="title"
     class="login-input mar"
   />
-  <label for="body" class="mar">Body</label>
+  <label for="body" class="mar">Body<span id="charLimit"></span></label>
   <textarea
     id="body"
     name="body"
