--- a/views/layouts/admin.ejs
+++ b/views/layouts/admin.ejs
@@ -12,5 +12,6 @@
       <main class="main_admin"><%- body %></main>
       <%- include("../partials/footer.ejs") %>
     </div>
+    <script src="/js/admin-script.js"></script>
   </body>
 </html>
