--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -479,6 +479,14 @@ label.mar {
 
 .mar {
   margin: 15px 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#charLimit {
+  font-size: 1rem;
 }
 
 /* Edit Article */
