--- a/views/admin/edit-article.ejs
+++ b/views/admin/edit-article.ejs
@@ -19,7 +19,7 @@
     class="login-input mar"
     value="<%= data.title %>"
   />
-  <label for="body" class="mar">Body</label>
+  <label for="body" class="mar">Body<span id="charLimit"></span></label>
   <textarea id="body" name="body" class="login-input mar" cols="50" rows="10">
 <%= data.body %></textarea
   >
