--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -61,6 +61,27 @@ h3 {
   padding: 20px 0;
 }
 
+/* Loader */
+
+.overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: #000;
+  z-index: 100;
+}
+
+.overlay img {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 50%;
+  width: auto;
+}
+
 /* Header */
 
 header {
