--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
+    <div class="overlay">
+      <img src="/images/load.gif" alt="Loading..." />
+    </div>
     <div class="container">
       <%- include("../partials/search.ejs") %> <%-
       include("../partials/header.ejs") %>
