--- a/views/layouts/admin.ejs
+++ b/views/layouts/admin.ejs
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
+    <div class="overlay">
+      <img src="/images/load.gif" alt="Loading..." />
+    </div>
     <div class="container">
       <%- include("../partials/header_admin.ejs") %>
       <main class="main_admin"><%- body %></main>
