--- a/views/partials/header_admin.ejs
+++ b/views/partials/header_admin.ejs
@@ -15,7 +15,5 @@
       </li>
     </ul>
   </nav>
-  <a href="/logout">
-    <a href="/logout" id="logout">Logout</a>
-  </a>
+  <a href="/logout" class="searchBtn" id="logout">Logout</a>
 </header>
